# dcmv

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
benches/: dicom_bench.rs
src/: cli.rs  dicom.rs  display.rs  display_metadata.rs  image.rs  lib.rs  main.rs  types.rs
src/dicom/: error.rs  metadata.rs  mod.rs  parser.rs  photometric.rs  pixel_data.rs  validation.rs
src/image/: grayscale.rs  mod.rs  normalization.rs  rgb.rs  ycbcr.rs
