[package]
name = "dcmv"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/realcundo/dcmv"

[lib]
name = "dcmv"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dicom = { version = "0.9.0", features = ["pixeldata"] }
dicom-dictionary-std = { version = "0.9.0", features = ["sop-class"] }
dicom-pixeldata = { version = "0.9.0", features = ["openjp2", "image", "charls"] }
image = "0.25.9"
viuer = {  version="0.11.0", features=["icy_sixel"] }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "dicom_bench"
harness = false

[profile.release]
opt-level = 3          # Maximum optimization speed
lto = "fat"            # Full Link Time Optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Reduce binary size by aborting on panic
strip = true           # Strip debug symbols

# Benchmark profile with native CPU optimizations
[profile.bench]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
