# TODO: Add license = "MIT OR Apache-2.0" and create LICENSE-MIT and LICENSE-APACHE files
[package]
name = "dcmv"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/realcundo/dcmv"

[lib]
name = "dcmv"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false } # make sure it matches transitive crossterm version so that it's not duplicated
dicom = { version = "0.9", features = ["pixeldata"] }
dicom-dictionary-std = { version = "0.9", features = ["sop-class"] }
dicom-pixeldata = { version = "0.9", features = ["image","gdcm"] }
image = "0.25"
thiserror = "2"
viuer = {  version="0.11", features=["icy_sixel"] }

[dev-dependencies]
approx = "0.5"
assert_matches = "1.5"
criterion = "0.8"

[[bench]]
name = "dicom_bench"
harness = false

[profile.release]
opt-level = 3          # Maximum optimization speed
lto = "fat"            # Full Link Time Optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Reduce binary size by aborting on panic
strip = true           # Strip debug symbols

# Benchmark profile with native CPU optimizations
[profile.bench]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
